# webring

./: .gitignore  Cargo.toml  README.md  casuallyblue.nix  flake.nix  rebuild-server.sh  runner.kdl  webring.nix
site-files/: index.html
site-files/css/: main.css
src/: feeds.rs  homepage.rs  join.rs  main.rs  members.rs  page.rs
static-files/: sites.dhall
static-files/css/: main.css
