[package]
name = "site"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"]}

axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
maud = {version = "*", features = ["axum"]}

reqwest = {version="0.11.18", features= ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"