[package]
name = "webring"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "1", features = ["full"]}

axum = { version = "0.6.18", features = ["query"]}
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
maud = {version = "*", features = ["axum"]}

reqwest = {version="0.11.18", features= ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4.4", features = ["derive"] }
ammonia = "3.3.0"
pulldown-cmark = "0.9.3"
serde_dhall = "0.12.1"
normalize-url-rs = "0.2.0"
rss = { version = "2.0.6", features = ["atom", "atom_syndication", "url", "validation"] }
